Add vercel.json to fix deployment

--- a/vercel.json
+++ b/vercel.json
@@ -10,10 +10,7 @@
     },
     {
       "src": "api/*.js",
-      "use": "@vercel/node",
-      "config": {
-        "distDir": "dist"
-      }
+      "use": "@vercel/node"
     }
   ],
   "routes": [
