--- a/vercel.json
+++ b/vercel.json
@@ -4,23 +4,13 @@
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    },
-    {
-      "src": "api/*.js",
-      "use": "@vercel/node"
+      "config": { "distDir": "build" },
+      "installCommand": "npm config set fetch-retries 5 && npm config set fetch-retry-maxtimeout 600000 && npm ci",
+      "buildCommand": "npm run build"
     }
   ],
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/frontend/build/$1"
-    }
+    { "source": "/api/(.*)", "destination": "https://localizadorbck-production.up.railway.app/api/$1" },
+    { "source": "/((?!api).*)", "destination": "/index.html" }
   ]
 }
